# portfolio-posts

./: LICENSE  README.md
posts/: Dockerfile  readme.md  run.sh
posts/german_election_2017/: .dockerignore  Dockerfile  german_election_2017.Rmd  german_election_2017.html  readme.md  run.sh
posts/moneyball_lacrosse/: main.py  plot.py  pyproject.toml  scrape.py  util.py
posts/moneyball_lacrosse/data/: teams.csv
posts/moneyball_lacrosse/plots/: model_plot_gapg_train.json  model_plot_gpg_train.json  model_plot_test.json  model_plot_train.json  plot_1.html  plot_2.html
posts/state_of_union/: readme.md  state_of_union.Rmd  state_of_union.html  state_of_union.md
posts/state_of_union/data/: StateOfUnion.csv
