[tool.poetry]
name = "moneyball_lacrosse"
version = "0.1.0"
description = ""
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
ipython = "^7.16.1"
plotly = "^4.9.0"
sklearn = "^0.0"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
