[tool.poetry]
name = "moneyball_lacrosse"
version = "0.1.0"
description = ""
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
plotly = "^4.9.0"
sklearn = "^0.0"
statsmodels = "^0.11.1"
selenium = "^3.141.0"
lxml = "^4.5.2"
bs4 = "^0.0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
loguru = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
